# learn-python-23-webdev

./: .env  .gitignore  create_admin.py  docker-compose.yml  pyproject.toml
webapp/: __init__.py  forms.py  model.py  python_org_news.py  weather.py
webapp/admin/: views.py
webapp/db/: __main__.py  create_data.py  db.py  loader_opt.py  model.py  queries.py  salary.csv
webapp/news/: models.py  views.py
webapp/salary/: models.py  salary_queries.py  views.py
webapp/templates/: base.html  bootstrap.html  login.html  menu.html  pagination.html
webapp/templates/admin/: index.html
webapp/templates/news/: index.html
webapp/templates/salary/: salary.html
webapp/templates/user/: login.html
webapp/user/: forms.py  models.py  views.py
