[tool.poetry]
name = "weather_app"
version = "0.1.0"
description = "Test web-dev project for making homework"
authors = ["Viktor Kertanov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
